@@ -97,7 +97,8 @@ csky_SRCS = csky_attrs.c csky_init.c csky_symbol.c csky_cfi.c \
 	    csky_regs.c csky_initreg.c csky_corenote.c
 
 loongarch_SRCS = loongarch_init.c loongarch_symbol.c loongarch_cfi.c \
-	    loongarch_regs.c loongarch_initreg.c loongarch_retval.c
+	    loongarch_regs.c loongarch_initreg.c loongarch_retval.c \
+	    loongarch_unwind.c
 
 arc_SRCS = arc_init.c arc_symbol.c
 
