@@ -55,6 +55,7 @@ loongarch_init (Elf *elf __attribute__ ((unused)),
   HOOK (eh, check_special_symbol);
   HOOK (eh, set_initial_registers_tid);
   HOOK (eh, return_value_location);
+  HOOK (eh, unwind);
 
   return eh;
 }
